k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icenotes-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
        app.openshift.io/vcs-uri: foo
        app.openshift.io/vcs-ref: bar
        app.openshift.io/runtime: js
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
      - name: icenotes-fe
        image: quay.io/bott_ibm/icenotes-fe:0.1
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        resources: {}
        livenessProbe:
          failureThreshold: 3
          httpGet:
            port: 8080
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            port: http
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      securityContext: {}
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
