k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: icenotes-fe
spec:
  tls:
    termination: edge
  to:
    name: icenotes-fe
    kind: Service
    weight: 100
  wildcardPolicy: None
